GoalTracker/force-app/main/default/objects/Preferred_Groups__mdt/Preferred_Groups__mdt.object-meta.xml
<CustomObject>
    <label>Preferred Groups</label>
    <pluralLabel>Preferred Groups</pluralLabel>
</CustomObject>