GoalTracker/force-app/main/default/objects/Preferred_Groups__mdt/fields/Core__c.field-meta.xml
<CustomField>
    <fullName>Core__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Core</label>
    <type>Checkbox</type>
</CustomField>