GoalTracker/force-app/main/default/objects/Preferred_Groups__mdt/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <label>Group Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>