GoalTracker/force-app/main/default/objects/Preferred_Groups__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-None-</fullName>
            </value>
            <value>
                <fullName>AZ - Phoenix</fullName>
            </value>
            <value>
                <fullName>CA - Los Angeles</fullName>
            </value>
            <value>
                <fullName>CA - Sacramento</fullName>
            </value>
            <value>
                <fullName>CA - San Diego</fullName>
            </value>
            <value>
                <fullName>CA - San Francisco</fullName>
            </value>
            <value>
                <fullName>CO - Denver</fullName>
            </value>
            <value>
                <fullName>CT - Hartford</fullName>
            </value>
            <value>
                <fullName>DC - Washington DC</fullName>
            </value>
            <value>
                <fullName>FL - South Florida</fullName>
            </value>
            <value>
                <fullName>FL - St Petersburg</fullName>
            </value>
            <value>
                <fullName>FL - West Palm Beach</fullName>
            </value>
            <value>
                <fullName>GA - Atlanta</fullName>
            </value>
            <value>
                <fullName>HI - Hawaii</fullName>
            </value>
            <value>
                <fullName>IL - Chicago</fullName>
            </value>
            <value>
                <fullName>IN - Indianapolis</fullName>
            </value>
            <value>
                <fullName>LA - New Orleans</fullName>
            </value>
            <value>
                <fullName>MA - Boston</fullName>
            </value>
            <value>
                <fullName>MD - Baltimore</fullName>
            </value>
            <value>
                <fullName>MI - Detroit</fullName>
            </value>
            <value>
                <fullName>MN - Minneapolis-St Paul</fullName>
            </value>
            <value>
                <fullName>MO - Kansas City</fullName>
            </value>
            <value>
                <fullName>MO - St. Louis</fullName>
            </value>
            <value>
                <fullName>NC - Charlotte</fullName>
            </value>
            <value>
                <fullName>NC - Raleigh</fullName>
            </value>
            <value>
                <fullName>NJ - Princeton</fullName>
            </value>
            <value>
                <fullName>NV - Las Vegas</fullName>
            </value>
            <value>
                <fullName>NY - Buffalo</fullName>
            </value>
            <value>
                <fullName>NY - New York City</fullName>
            </value>
            <value>
                <fullName>NY - Rochester</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>